--- a/bfpcompiler/Makefile
+++ b/bfpcompiler/Makefile
@@ -5,7 +5,7 @@ CFLAGS	= -Wall
 LDFLAGS =
 SRCDIR	= src/
 INCLUDE	= include/
-OBJECTS	= analyzer.o tokenizer.o compilefuck.o
+OBJECTS	= assembling.o analyzer.o tokenizer.o compilefuck.o
 all: $(BIN)
 
 $(BIN): $(OBJECTS)
